--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: '>=3.4.4 <4.0.0'
 
 dependencies:
+  firebase_auth: ^5.1.4
+  firebase_core: ^3.3.0
   flutter:
     sdk: flutter
   provider: ^6.1.2
